# algorithms

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustfmt.toml
backtracking/: Cargo.toml
backtracking/src/: sudoku.rs
big-integer/: Cargo.toml
big-integer/src/: lib.rs
ciphers/: Cargo.toml
ciphers/src/: another_rot13.rs  caesar.rs  hashing_traits.rs  lib.rs  rot13.rs  theoretical_rot13.rs
compression/: Cargo.toml
compression/src/: lib.rs  run_length_encoding.rs
data-structures/: Cargo.toml
data-structures/src/: avl_tree.rs  b_tree.rs  binary_search_tree.rs  fenwick_tree.rs  graph.rs  lib.rs  linked_list.rs  probabilistic.rs  queue.rs  segment_tree.rs  stack_using_singly_linked_list.rs  treap.rs  trie.rs  union_find.rs
data-structures/src/probabilistic/: bloom_filter.rs  count_min_sketch.rs
dynamic-programming/: Cargo.toml
dynamic-programming/src/: coin_change.rs  egg_dropping.rs  fibonacci.rs  fractional_knapsack.rs  is_subsequence.rs  knapsack.rs  lib.rs  longest_common_subsequence.rs  longest_continuous_increasing_subsequence.rs  maximal_square.rs  maximum_subarray.rs  rod_cutting.rs  snail.rs  subset_generation.rs
general/: Cargo.toml
general/src/: convex_hull.rs  fisher_yates_shuffle.rs  genetic.rs  hanoi.rs  huffman_encoding.rs  kmeans.rs  lib.rs  mex.rs  permutations.rs  two_sum.rs
general/src/permutations/: heap.rs  naive.rs  steinhaus_johnson_trotter.rs
math/: Cargo.toml
math/src/: abs.rs  aliquot_sum.rs  collatz_sequence.rs  factors.rs  fast_fourier_transform.rs  faster_perfect_numbers.rs  gaussian_elimination.rs  lcm_of_n_number.rs  lib.rs  linear_sieve.rs  matrix_ops.rs  prime_numbers.rs  random.rs
searching/: Cargo.toml
searching/src/: binary_search.rs  binary_search_recursive.rs  exponential_search.rs  fibonacci_search.rs  interpolation_search.rs  jump_search.rs  kth_smallest.rs  kth_smallest_heap.rs  lib.rs  linear_search.rs  quick_select.rs  ternary_search.rs  ternary_search_min_max.rs  ternary_search_min_max_recursive.rs  ternary_search_recursive.rs
sorting/: Cargo.toml
sorting/src/: bead_sort.rs  bitonic_sort.rs  bogo_sort.rs  bubble_sort.rs  bucket_sort.rs  cocktail_shaker_sort.rs  comb_sort.rs  counting_sort.rs  cycle_sort.rs  dutch_national_flag_sort.rs  exchange_sort.rs  gnome_sort.rs  heap_sort.rs  insertion_sort.rs  lib.rs  merge_sort.rs  odd_even_sort.rs  pancake_sort.rs  patience_sort.rs  pigeonhole_sort.rs  quick_sort.rs  radix_sort.rs  selection_sort.rs  shell_sort.rs  sleep_sort.rs  stooge_sort.rs  tim_sort.rs  wiggle_sort.rs
src/: backtracking.rs  big_integer.rs  ciphers.rs  data_structures.rs  lib.rs  math.rs  sorting.rs
src/backtracking/: all_combination_of_size_k.rs  sudoku.rs
src/big_integer/: hello_bigmath.rs  poly1305.rs
src/ciphers/: another_rot13.rs  caesar.rs  hashing_traits.rs  rot13.rs  sha256.rs  theoretical_rot13.rs  xor.rs
src/compression/: run_length_encoding.rs
src/data_structures/: b_tree.rs  heap.rs  linked_list.rs
src/math/: abs.rs  aliquot_sum.rs  collatz_sequence.rs  fast_fourier_transform.rs  faster_perfect_numbers.rs  gaussian_elimination.rs  lcm_of_n_number.rs  matrix_ops.rs  mersenne_primes.rs  prime_numbers.rs  random.rs
src/sorting/: bead_sort.rs  bubble_sort.rs  bucket_sort.rs  cocktail_shaker_sort.rs  comb_sort.rs
string/: Cargo.toml
string/src/: aho_corasick.rs  anagram.rs  autocomplete_using_trie.rs  boyer_moore_search.rs  burrows_wheeler_transform.rs  duval_algorithm.rs  hamming_distance.rs  jaro_winkler_distance.rs  knuth_morris_pratt.rs  levenshtein_distance.rs  lib.rs  manacher.rs  palindrome.rs  rabin_karp.rs  reverse.rs  run_length_encoding.rs  suffix_array.rs  suffix_tree.rs  z_algorithm.rs
