[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"
authors = ["Todd Matheson <tmatheson11186@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
default = ["big-math"]
big-math = ["dep:num-bigint", "dep:num-traits"]
