[workspace]
members = [
    "sorting",
    "math"
]


[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"
authors = ["Todd Matheson <tmatheson11186@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# lazy_static = "1.4.0"
once_cell = { version = "1.17", optional = true }
parking_lot = { version = "0.12", optional = true, features = ["nightly"] }
itertools = "0.10.5"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2" }
num-complex = { version = "0.4" }
num-integer = { version = "0.1" }
serde = { version = "1.0", optional = true, features = ["derive"] }
rand = { version = "0.8", optional = true, features = ["min_const_gen"] }
rayon = { version = "1.7", optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
default = ["parking_lot", "rayon", "big-math", "serialize-num", "rand-num"]
parking_lot = ["dep:parking_lot", "once_cell?/parking_lot"]
big-math = ["dep:num-bigint"]
once_cell = ["dep:once_cell"]
rayon = ["dep:rayon"]
serialize-num = ["dep:serde", "num-bigint?/serde", "num-complex/serde"]
rand-num = ["dep:rand", "num-bigint?/rand", "num-complex/rand"]

[profile.bench]
debug = true

[profile.test]
debug = true
