[workspace]
members = [
    "sorting",
    "math"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Todd Matheson <tmatheson11186@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["algorithms", "data-structures", "mathematics", "rust-patterns"]

[workspace.dependencies]
itertools = "0.10"
num-traits = "0.2"
num-complex = "0.4"
num-integer = "0.1"
num-bigint = "0.4"
once_cell = "1.17"
parking_lot = { version = "0.12", features = ["nightly"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", features = ["min_const_gen"] }
rayon = { version = "1.7" }

[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"
authors = ["Todd Matheson <tmatheson11186@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["algorithms", "data-structures", "math", "sort", "cipher"]
categories.workspace = true
publish = false

[dependencies]
once_cell = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
num-complex = { workspace = true, optional = true }
num-integer = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
rand = { workspace = true, optional = true, features = ["min_const_gen"] }
rayon = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
default = ["parking_lot", "rayon"]
parking_lot = ["dep:parking_lot", "once_cell?/parking_lot"]
once_cell = ["dep:once_cell"]
rayon = ["dep:rayon"]
big-math = ["dep:num-traits", "dep:num-bigint", "dep:num-integer"]
serialize-num = ["dep:serde", "num-bigint?/serde", "num-complex?/serde"]
rand-num = ["dep:rand", "num-bigint?/rand", "num-complex?/rand"]

[profile.bench]
debug = true

[profile.test]
debug = true
