[package]
name = "big-integer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["algorithms", "math"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true, optional = true }
num-integer = { workspace = true }
rand = { workspace = true, optional = true, features = ["min_const_gen"] }
serde = { workspace = true, optional = true, features = ["derive"] }

[features]
default = []
rand-num = ["dep:rand", "num-bigint/rand", "num-complex?/rand"]
serialize-num = ["dep:serde", "num-bigint/serde", "num-complex?/serde"]