[package]
name = "math"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["algorithms", "math"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }