[package]
name = "string"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["algorithms", "string"]
categories = ["algorithms", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
smallvec = { workspace = true }